Docker_Kubernetes/k8s17_yaml/curl-util.yaml
---

apiVersion: v1
kind: Pod
metadata:
  name: curl-util
spec:
  containers:
  - name: curl-util
    image: docker.io/appropriate/curl:latest
    imagePullPolicy: Never
    command:
    - sh
    - -c
    - while true; do sleep 1; done
